# DaysOfJFE

./: .gitignore  CMakeLists.txt  CMakePresets.json  DaysOfJFE.sln  README.md  vcpkg.json
DaysOfJFE_Gal/: Button.cpp  Button.h  ClickPaper.cpp  ClickPaper.h  Controls.cpp  Controls.h  DaysOfJFE_Gal.vcxproj  Dialog.h  GameScript.cpp  GameScript.cpp.bak  GameScript.h  GameWindow.cpp  GameWindow.h  HomeWindow.cpp  HomeWindow.h  IGlobalEvent.cpp  IGlobalEvent.h  ImageContainer.cpp  ImageContainer.h  LoadSceneWindow.cpp  LoadSceneWindow.h  LoadingWindow.cpp  LoadingWindow.h  MusicPlayer.cpp  MusicPlayer.cpp.bak  MusicPlayer.h  MusicPlayer.h.bak  OutlineText.cpp  OutlineText.h  ScriptReader.h  SettingWindow.cpp  SettingWindow.h  TextBlock.cpp  TextBlock.h  Timer.h  TitleTransition.cpp  TitleTransition.h  Utils.cpp  Utils.h  WindowManager.cpp  (+13 more)
DaysOfJFE_Gal/lib/yaml-cpp/: yaml-cpp.lib
DaysOfJFE_Gal/src/sound/bgm/: 1.flac
DaysOfJFE_Gal/x64/Debug/: yaml-cppd.lib
DaysOfJFE_Gal/x64/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
DaysOfJFE_Gal/x64/Release/: DaysOfJFE_Gal.exe.recipe  DaysOfJFE_Gal.ipdb  DaysOfJFE_Gal.vcxproj.FileListAbsolute.txt  script1.yaml  yaml-cpp.lib
DaysOfJFE_Gal/x64/Release/DaysOfJFE_Gal.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  DaysOfJFE_Gal.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
DaysOfJFE_Gal/x64/Release/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
assets/scripts/: demo_script.yaml  script2512.yaml
include/: Button.h  ClickPaper.h  Controls.h  GameScript.h  GameWindow.h  HomeWindow.h  IGlobalEvent.h  ImageContainer.h  LoadSceneWindow.h  LoadingWindow.h  MusicPlayer.h  OutlineText.h  SettingWindow.h  TextBlock.h  Timer.h  TitleTransition.h  WindowManager.h  WindowPanel.h
src/: Button.cpp  ClickPaper.cpp  Controls.cpp  GameScript.cpp  GameWindow.cpp  HomeWindow.cpp  IGlobalEvent.cpp  ImageContainer.cpp  LoadSceneWindow.cpp  LoadingWindow.cpp  MusicPlayer.cpp  OutlineText.cpp  SettingWindow.cpp  TextBlock.cpp  TitleTransition.cpp  WindowManager.cpp  WindowPanel.cpp  main.cpp
src/app/: ApplicationContext.cpp  ApplicationContext.h  EventManager.cpp  EventManager.h  IGlobalEvent.cpp  IGlobalEvent.h
src/audio/: AudioService.cpp  AudioService.h  MusicPlayer.cpp  MusicPlayer.h
src/gfx/: Assets.cpp  Assets.h  Canvas.cpp  Canvas.h  FontManager.cpp  FontManager.h  IRenderer.h  SkiaRenderer.cpp  SkiaRenderer.h
src/gfx/geom/: CornerRadius.h  Geom.h  Insets.h  Rect.cpp  Rect.h  Size.h  Vec2.h
src/platform/: GlfwPlatform.cpp  GlfwPlatform.h  PlatformEvent.h
src/script/: GameScript.cpp  GameScript.h  ScriptModel.h  ScriptRuntime.cpp  ScriptRuntime.h  ScriptYamlLoader.cpp  ScriptYamlLoader.h
src/ui/: Button.cpp  Button.h  ClickPaper.cpp  ClickPaper.h  Controls.cpp  Controls.h  DialogBox.cpp  DialogBox.h  ImageContainer.cpp  ImageContainer.h  Layout.cpp  Layout.h  OutlineText.cpp  OutlineText.h  TextBlock.cpp  TextBlock.h  TitleTransition.cpp  TitleTransition.h  WindowManager.cpp  WindowManager.h  WindowPanel.cpp  WindowPanel.h
src/utils/: Timer.h  Utf8Helper.cpp  Utf8Helper.h
src/windows/: GameWindow.cpp  GameWindow.h  HomeWindow.cpp  HomeWindow.h  LoadSceneWindow.cpp  LoadSceneWindow.h  LoadingWindow.cpp  LoadingWindow.h  SettingWindow.cpp  SettingWindow.h  WindowManager.cpp  WindowManager.h  WindowPanel.cpp  WindowPanel.h
